--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -29,7 +29,7 @@
 \vspace*{-0.025in}
 \begin{figure}[htb]
 \begin{center}
-\includegraphics[width=8cm]{./IMAGENES/logo}
+\includegraphics[width=8cm]{./IMG/logo}
 \end{center}
 \end{figure}
 \vspace*{0.15in}
@@ -106,16 +106,16 @@ Después de descargar el fichero, descomprimir la carpeta que lo contiene,
 posteriormente, ubicar el archivo en donde se encuentra el ejecutable y
 hacer doble clic en el setup.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img1}
+\includegraphics[width=15cm]{./IMG/img1}
 \end{center} 
 Posteriormente ejecutar esta aplicacion y aceptar los permisos aparecera el
 instalador del gestor de base de datos.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img2}
+\includegraphics[width=15cm]{./IMG/img2}
 \end{center} 
 Ahora procedemos a instalarlo y el asistente empezará dicho proceso
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img3}
+\includegraphics[width=15cm]{./IMG/img3}
 \end{center} 
 
 
@@ -126,11 +126,11 @@ instalacion iniciaremos la base de datos:\\
 Para esto deberá ir al menú inicio de Windows, clic en todos los programas,
 localiza Oracle Database 11g Express Edition y después en Get Sarted
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img4}
+\includegraphics[width=15cm]{./IMG/img4}
 \end{center} 
 Ahora iniciará el gestor de Base de Datos, se mostrará la pantalla de inicio
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img5}
+\includegraphics[width=15cm]{./IMG/img5}
 \end{center} 
 
 
@@ -153,7 +153,7 @@ Tiempo estimado: 2 horas.\\
 \textbf{Desarrollo}:\\
 iniciar el la base de datos
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img6}
+\includegraphics[width=15cm]{./IMG/img6}
 \end{center}
 
 Ir a Application Express, después validarnos como usuario. Ahora se procede a
@@ -161,17 +161,17 @@ crear un Workspace (figura 2.2), llenando el formulario, en donde ingresamos el
 nombre de la base de datos, el nombre de usuario y por último la
 contrasena para poder acceder:
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img7}
+\includegraphics[width=15cm]{./IMG/img7}
 \end{center}
 Una vez creado muestra un mensaje de confirmacion, indicando que el
 Workspace se ha creado correctamente. Posteriormente, se procede a acceder al
 espacio de trabajo.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img8}
+\includegraphics[width=15cm]{./IMG/img8}
 \end{center}
 Una vez ingresado se muestra la siguiente imagen
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img9}
+\includegraphics[width=15cm]{./IMG/img9}
 \end{center}
 
 \subsubsection{Creacion de Base de datos de Oracle}
@@ -192,24 +192,24 @@ Una vez inicializado en gestor de base de datos selecciona la página principal 
 WokrkSpace
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img10}
+\includegraphics[width=15cm]{./IMG/img10}
 \end{center}
 Selecciona la solapa Appliction Buildes, posteriormente Database Applications,
 pulsa clic en el boton Create. 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img11}
+\includegraphics[width=15cm]{./IMG/img11}
 \end{center}
 Se pueden crear diferentes tipos de aplicaciones (Database, Websheet, Sample
 Applications). Seleccionar el tipo database y da clic en siguiente.
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img12}
+\includegraphics[width=15cm]{./IMG/img12}
 \end{center}
 Posteriormente deberas llenar todos los campos que requiere la BD (método,
 esquema, id) y finalmente Confirmar
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img13}
+\includegraphics[width=15cm]{./IMG/img13}
 \end{center}
 \subsubsection{Creacion de Base de datos de Oracle}
 
@@ -234,13 +234,13 @@ Applications. Ahí encontraras las bases de datos que hayas creado. p.e la figur
 icono.
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img14}
+\includegraphics[width=15cm]{./IMG/img14}
 \end{center}
 Una vez hecha la seleccion podras observar el menu como lo muestra la figura
 4.2. En la cual tendras dos opciones de menú gráfico y contextual, ambos servirán
 para el manejo y administracion de la base de datos.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img15}
+\includegraphics[width=15cm]{./IMG/img15}
 \end{center}
 Posteriormente selecciona la solapa del menú contextual de la parte superior de la
 pantalla denominado SQL Workshop, acontinuacion Object Browser. Finalmente
@@ -248,7 +248,7 @@ se vizualiza una pantalla que te indica en la parte lateral derecha de la patall
 tipos de objetos puedes crear, p.e tablas (entidades), vistas, procesos, funciones,
 por mencionar algunas.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img16}
+\includegraphics[width=15cm]{./IMG/img16}
 \end{center}
 Selecciona el tipo de objeto y da clic en el boton create (figura 3.4). Para este
 caso selecciona Table, una vez hecha esta seleccion podras ingresar los campos
@@ -257,26 +257,26 @@ necesario hacer uso del diccionario de datatos creado durante el diseno conceptu
 y logico de la base de datos. 
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img17}
+\includegraphics[width=15cm]{./IMG/img17}
 \end{center}
 Seleccionar la clave primaria y Next. 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img18}
+\includegraphics[width=15cm]{./IMG/img18}
 \end{center}
 Para este caso no existirá ninguna clave foránea y por lo tanto damos en
 siguiente. Para las restricciones, no se hace nada y finalmente damos en créate
 para crear nuestra tabla. 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img19}
+\includegraphics[width=15cm]{./IMG/img19}
 \end{center}
 Confirmacion de los datos con sentencias SQL de la tabla
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img20}
+\includegraphics[width=15cm]{./IMG/img20}
 \end{center}
 Finalmente se puede visualizar la entidad Materia, aunado a esto podras observar
 un menú contextual que te permite crear y administrar la entidad. 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img21}
+\includegraphics[width=15cm]{./IMG/img21}
 \end{center}
 
 Actividad extraclase: Ahora procede a crear las tablas: Teléfono,
@@ -286,7 +286,7 @@ tablas tendras la siguiente vista: (4.10) Para mas informacion consulta Anexos B
 C.
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img22}
+\includegraphics[width=15cm]{./IMG/img22}
 \end{center}
 
 
@@ -301,56 +301,56 @@ C.
 Antes de instalar cualquier SGBD es necesario conocer los requerimientos de hardware y software, el posible software a desinstalar previamente, verificar el registro de Windows y el entorno del sistema, así como otras caracteristicas de configuracion especializadas como pueden ser la reconfiguracion de los servicios TCP/IP y la modificacion de los tipos archivos HTML para los diversos navegadores.
 Se presenta a continuacion una serie de requerimientos minimos de hardware y software para instalar Oracle Express 11g y MySQL estandar version 5.1. en y Ubuntu 14.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img23}
+\includegraphics[width=15cm]{./IMG/img23}
 \end{center}
 \subsubsection{Proceso de instalacion}
 Descarga el software apropiado a tu haradwawre y sistema operativo aqui\\
 Descomprime el archivo descargado y ejecuta el archivo setup.exe (caso windows) con privilegios de administrador\\
 Pulse sobre el boton de siguiente para iniciar la instalacion.\\
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img24}
+\includegraphics[width=15cm]{./IMG/img24}
 \end{center}
 Acepte los terminos de acuerdo de licencia
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img25}
+\includegraphics[width=15cm]{./IMG/img25}
 \end{center}
 Verifique los requerimientos de espacio y si los cumple pulse aceptar. Considere un Giga más para almacenamiento.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img26}
+\includegraphics[width=15cm]{./IMG/img26}
 \end{center}
 Introduzca el password para el usuario SYSTEM. Despues de terminar la instalacion debera iniciar la base de datos con este usuario.
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img27}
+\includegraphics[width=15cm]{./IMG/img27}
 \end{center}
 A continuacion Oracle Database XE nos informa sobre los puertos que utilizara. Pulse Instalar.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img28}
+\includegraphics[width=15cm]{./IMG/img28}
 \end{center}
 El tiempo de instalacion de Oracle Database XE depende de su equipo (procesador y memoria). Al terminar el proceso de instalacion pulse el boton Terminar.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img29}
+\includegraphics[width=15cm]{./IMG/img29}
 \end{center}
 Al pulsar el boton Terminar nos direccionara a la pagina de acceso de la base de datos (http://127.0.0.1:8080/apex). Recuerde iniciar por primera vez con el usuario SYSTEM y su password.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img30}
+\includegraphics[width=15cm]{./IMG/img30}
 \end{center}
 Pulse el icono Sessions e introduzca la siguiente informacion
 
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img31}
+\includegraphics[width=15cm]{./IMG/img31}
 \end{center}
 Para futuros accesos usted puede pulsar boton de inicio, todos los programas, base de datos 11g Express Edition o el icono en su escritorio denominado Base de Datos.
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img32}
+\includegraphics[width=15cm]{./IMG/img32}
 \end{center}
 Ahora vamos a crear un usuario
 \begin{center}
-\includegraphics[width=8cm]{./IMAGENES/img33}
+\includegraphics[width=8cm]{./IMG/img33}
 \end{center}
 llenar todo el formulario
 \begin{center}
-\includegraphics[width=15cm]{./IMAGENES/img34}
+\includegraphics[width=15cm]{./IMG/img34}
 \end{center}
 
 \subsection{implementacion}
