--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -69,8 +69,17 @@ BASE DE DATOS II\\
 \vspace*{0.1in}
 \begin{large}
 Integrantes: \\
-Fanny Luz Clemente Cruz \\
-Gisela Flores Colque\\
+\begin{flushleft}
+Acevedo Vásquez, Leonardo Fernando 	(2014047512) \\
+Andía Bernedo, Josei Jomar 			(2014049093) \\
+Condori Velarde, Sonia          	(2014049546) \\
+Clemente Cruz, Fanny Luz    		(2014049550) \\
+Flores Colque, Gisela           	(2014049547) \\
+Llatasi Cohaila, Cristian Omar		(2014037546) \\
+Morales Anquise, Tommy Edwards 		(2015050480) \\
+Ticona Arcaya, Sergio Alexis		(2014049171) \\
+Tapia Ticona, Lupe Carolina			(2014049548) \\
+\end{flushleft}
 \end{large}
 \end{center}
 
