--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -42,7 +42,7 @@ TITULO:\\
 
 \vspace*{0.1in}
 \begin{Large}
-\textbf{TRABAJO ENCARGADO} \\
+\textbf{Instalacion de Base de Datos Oracle} \\
 \end{Large}
 
 \vspace*{0.3in}
