--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -99,19 +99,19 @@ Instalacion de Oracle Database 12c
 \newpage
 \section{Oracle Linux modo Terminal}
 \subsection{Instalacion}
-Para poder realizar la instalación de la base de datos Oracle debemos de tener lo que es el Sistema operativo Oracle Linux. \\
+Para poder realizar la instalación de la base de datos  debemos de tener lo que es el Sistema operativo Oracle Linux. \\
 - Iniciaremos sesión en Oracle Linux. \\
 \begin{center}
-\includegraphics[width=8cm]{IMGORACLE/img02.png}
+\includegraphics[width=8cm]{IMG/oracle1.png} 
 \end{center}
 
 \begin{center}
-\includegraphics[width=8cm]{IMGORACLE/img03.png} 
+\includegraphics[width=8cm]{IMG/oracle2.png} 
 \end{center}
 - Enseguida abriremos la terminal \\
 
 \begin{center}
-\includegraphics[width=8cm]{IMGORACLE/img04.png} 
+\includegraphics[width=8cm]{IMG/oracle3.png} 
 \end{center}
 
 \subsection{implementacion}
