--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -186,6 +186,66 @@ Ahora vamos con el segundo  con esto bastara y terminara la instalacion\\
 
 
 \subsection{implementacion}
+Abriremos el sistema de configuracion con el comando dbca \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/30.png} 
+\end{center}
+Daremos clic en siguiente. \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/31.png}
+\end{center}
+A continuación colocaremos el nombre de la base de datos en este caso  prueba. \\
+\begin{center}
+Ahora esta pidiendo un asistente de configuración de base de datos que es el listener.\\
+\includegraphics[width=10cm]{oraclelinux/32.png}
+\end{center}
+Mediante la consola abriremos con el comando netca el asistente de configuracion.\\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/33.png}
+\end{center}
+Ahora seleccionamos en donde dice configuracion de listener daremos clic en siguiente. \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/34.png}
+\end{center}
+Digitamos un nombre que sera LISTENER \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/36.png}
+\end{center}
+Solo daremos clic en siguiente. \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/37.png}
+\end{center}
+Seleccionamos usar el numero de puerto.
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/38.png}
+\end{center}
+Configuracion de listener finalizada.
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/39.png}
+\end{center}
+Colocaremos una contraseña \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/40.png}
+\end{center}
+clic en siguiente \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/41.png}
+\end{center}
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/42.png}
+\end{center}
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/43.png}
+\end{center}
+Se esta creando la base de datos \\
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/44.png}
+\end{center}
+visualizamos la conexion a sql.
+\begin{center}
+\includegraphics[width=10cm]{oraclelinux/46.png}
+\end{center}
+
 
 \subsection{Configuracion}
 
