--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -194,9 +194,9 @@ Daremos clic en siguiente. \\
 \begin{center}
 \includegraphics[width=10cm]{oraclelinux/31.png}
 \end{center}
-A continuación colocaremos el nombre de la base de datos en este caso  prueba. \\
+A continuacion colocaremos el nombre de la base de datos en este caso  prueba. \\
 \begin{center}
-Ahora esta pidiendo un asistente de configuración de base de datos que es el listener.\\
+Ahora esta pidiendo un asistente de configuracion de base de datos que es el listener.\\
 \includegraphics[width=10cm]{oraclelinux/32.png}
 \end{center}
 Mediante la consola abriremos con el comando netca el asistente de configuracion.\\
@@ -224,9 +224,11 @@ Configuracion de listener finalizada.
 \includegraphics[width=10cm]{oraclelinux/39.png}
 \end{center}
 Colocaremos una contraseña \\
+
 \begin{center}
 \includegraphics[width=10cm]{oraclelinux/40.png}
 \end{center}
+
 clic en siguiente \\
 \begin{center}
 \includegraphics[width=10cm]{oraclelinux/41.png}
