--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -89,12 +89,12 @@ Tapia Ticona, Lupe Carolina			(2014049548) \\
 
  \tableofcontents
  \newpage
-SESI0N DE LABORATORIO N° 07:
 Instalacion de Oracle Database 12c
  
 \section{INTRODUCCION} 
  \newpage
 \section{Objetivos} 
+- Realizar la instalacion, implementacion del gestor de base de datos Oracle.
 \newpage
 \section{Oracle Linux modo Terminal}
 \subsection{Instalacion}
