--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -92,6 +92,10 @@ Tapia Ticona, Lupe Carolina			(2014049548) \\
 Instalacion de Oracle Database 12c
  
 \section{INTRODUCCION} 
+Oracle la primera Base de Datos Diseñada para Grid Computing. es un sistema de gestion de  base de datos relacional fabricado por Oracle Corporation.\\
+Oracle es basicamente una harramienta Cliente/Servidor para la gestion de base de datos la gran potencia que tiene y su elevado precio hace que solo se vea en empresas muy grandes y multinacionales, por norma general. \\
+Oracle Corporation: Es una de las mayores compañias de software del mundo.Sus producto van desde bases de datos (Oracle) hasta sistemas de gestion, cuanta ademas con herramientas propias de desarrollo para realizar potentes aplicaciones, como Oracle. \\
+
  \newpage
 \section{Objetivos} 
 - Realizar la instalacion, implementacion del gestor de base de datos Oracle.
