--- a/TrabajoFinal_IIUnidad.tex
+++ b/TrabajoFinal_IIUnidad.tex
@@ -111,7 +111,7 @@ Para poder realizar la instalacion de la base de datos  debemos de tener lo que 
 \begin{center}
 \includegraphics[width=8cm]{IMG/oracle2.png} 
 \end{center}
-- Enseguida abriremos la terminal \\
+- Enseguida abriremos el terminal en oracle \\
 
 \begin{center}
 \includegraphics[width=8cm]{IMG/oracle3.png} 
